--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <nav-component></nav-component>
 <mainpage-component></mainpage-component>
+<artimages-component></artimages-component>
 <footer-component></footer-component>
