--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -2,7 +2,8 @@
     <section class="landing-section">
         <img class="landing-img"src="Designer.png">
     <div class="landing-text">
-        <h1><span class="two-words">   Best PIZZA </span> <br/><br/>      In Town</h1>
+        <h1>Best PIZZA </h1>
+        <h1>In Town</h1>
         
         <button>Order Now</button>
     </div>
